assets/css/style.css
body {
    padding-top: 75px;
}

.contact-button {
    padding: 0;
    margin-bottom: 10px;
    color: white;
    text-decoration: none;
}

/* ----- homepage(about-us, services, find-us)--*/
.about {
    padding-top: 10rem;
    padding-bottom: 10rem;
}

.img-rows {
    height: 100%;
    width: 100%;
    padding: 0;
    margin: 0;

}

.services-text {
    padding-top: 5rem;
    padding-bottom: 5rem;
}

hr {
    border-top: 5px solid #FF8C00;
    width: 50%;
    margin-left: 25%;

}

.find {

    padding-top: 10rem;
    padding-bottom: 10rem;
    margin-bottom: 0;
    margin-left: auto;
    margin-right: auto;
    overflow: hidden;

}

/* ----- rooms page(room-features, room-types, standard, family, deluxe)--*/
#room-image {

    height: 100%;
    width: 100%;
    padding: 0;
}

.room-features {
    list-style-type: none;
    line-height: 2;
}

.room-types {
    height: 75%;
}

#standard-room {
    border-radius: 15px 0 15px 0;
    border: 2px solid orange;
    color: orange;
    padding-top: 5%;
    padding-bottom: 20px;

}

#family-room {
    border-radius: 15px 0 15px 0;
    padding-top: 5%;
    border: 2px solid black;
    padding-bottom: 20px;
}

#deluxe-room {
    border-radius: 15px 0 15px 0;
    padding-top: 5%;
    border: 2px solid black;
    padding-bottom: 20px;
}

/* ----- hospitality page()--*/
.card {
    background: black;
    border-radius: 10px;
    border: 2px solid orange;

}

/* ----- contact page()--*/

#contact-section {

    background: url("../../assets/lobby2.jpg");
    background-size: cover;
    background-position: center;
    height: 75%;

}

#contact-line {
    border-top: 10px solid darkorange;
    width: 50%;
    margin-left: 25%;

}

.contact {
    border: 5px solid orange;
    border-radius: 10px;
}

#contact-form {
    margin-left: 12.5%;
    margin-bottom: 20px;
    border: 5px dashed orange;
    border-radius: 5px;
}

#contact-button {
    width: 50%;
    margin-left: 25%;
    margin-bottom: 10px;
}

